--- a/contact us.html
+++ b/contact us.html
@@ -122,7 +122,7 @@
 
   <!-- 📩 Contact Form -->
   <div class="form-container">
-    <img src="logo.png" alt="Third Mumbai Developer Logo" />
+    <img src="images/logo.png" alt="Third Mumbai Developer Logo" />
     <h2>Contact Us</h2>
     <form id="contactForm" method="POST">
       <label for="name">Full Name *</label>
